Last part of adopting the generic content types to the new setLabel attribute of Widget.
git-svn-id: https://svn.libreccm.org/ccm/trunk@2738 8810af33-2d31-482b-a856-94f89814c4df